<resources>
    <string name="app_name">Food Movers</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="password_hint">Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="mobile">Mobile</string>
    <string name="New">New</string>
    <string name="googleLocalDomain">.co.ke</string>
    <string name="MyOrders">My Orders</string>
    <string name="Saved_">Saved</string>
    <string name="title_activity_scrolling">My Orders</string>
    <string name="title_activity_maps">Map</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="custom_theme">Custom Theme</string>
    <string name="facebook_app_id">2015028005440910</string>
    <string name="fb_login_protocol_scheme">fb2015028005440910</string>
    <string name="title_activity_print_process">PHOTOzuri</string>
    <string name="title_activity_home">Print Type</string>
    <string name="title_activity_google_photos">Google Photos</string>
    <string name="title_activity_facebook_photos">Facebook Photos</string>
    <string name="title_activity_gallery_photos">Gallery Photos</string>
    <string name="title_activity_instagram_photos">Instagram Photos</string>
    <string name="add_photos">Add photos</string>
    <string name="title_activity_passports_print">Passports Print</string>
    <string name="title_activity_wall_mount_prints">WallMount Prints</string>
    <string name="title_activity_payments">Payments</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_main_stories">MainStories</string>
    <string name="title_activity_view_orders">My Order</string>
    <string name="title_activity_main_dashboard">Main Dashboard</string>
    <string name="title_activity_products">Products</string>
    <string name="imagepicker_action_ok">OK</string>
    <string name="imagepicker_action_done">DONE</string>
    <string name="imagepicker_title_folder">Albums</string>
    <string name="imagepicker_title_image">Galleries</string>
    <string name="imagepicker_text_gif">GIF</string>
    <string name="imagepicker_photo_count_multiple">%d images</string>
    <string name="imagepicker_photo_count_single">%d image</string>
    <string name="imagepicker_error_no_camera">No camera found</string>
    <string name="imagepicker_error_create_image_file">Failed to create image file</string>
    <string name="imagepicker_error_images_not_exist">Images not exist</string>
    <string name="imagepicker_error_unknown">Unknown error</string>
    <string name="imagepicker_msg_no_images">No images</string>
    <string name="imagepicker_msg_no_write_external_storage_permission">To continue, please give access to your photos</string>
    <string name="imagepicker_msg_no_camera_permission">To continue, please give access to take pictures</string>
    <string name="imagepicker_msg_no_write_external_storage_camera_permission">To continue, please give access to take pictures</string>
    <string name="imagepicker_msg_limit_images">Limit selection to %d images</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="decription">Decription</string>
    <string name="title_activity_single_print">Single Prints</string>
    <string name="title_activity_base">Base Activity</string>
    <string name="town_city">Town/City</string>
    <string name="street">Street</string>
    <string name="reQuestId">1111</string>
    <string name="building">Building</string>
    <string name="contact_number">Contact Number (2547********)</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="developerkey">erickogi</string>
    <string name="title_activity_sc">ScActivity</string>
    <string name="save">Save</string>
    <string name="dismiss">Dismiss</string>
    <string name="caption">Caption</string>
    <string name="not_paid">Not Paid</string>
    <string name="paid">Paid</string>
    <string name="describe_your_location">Describe your location</string>
    <string name="gallery">Gallery</string>
    <string name="gdSeparator2">.</string>
    <string name="gdFilePof">php</string>
    <string name="gdqMark">\?</string>
    <string name="faceb">Facebook</string>
    <string name="google_photos">Google Photos</string>
    <string name="instagram">Instagram</string>
    <string name="title_activity_instagram_v2">InstagramV2</string>
    <string name="title_activity_edit_image">EditImageActivity</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="front_cover">Front cover</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="pinhint">secret pin</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
</resources>