<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout


    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/scrollView_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="visible">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_view"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_gravity="center"

        android:gravity="center"

        android:visibility="gone"


        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView


                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/signUp"
                    android:textColor="@color/white_greyish"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />


            </LinearLayout>


            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="2dp"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_firstnames"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@color/transparent"
                    android:drawablePadding="8dp"

                    android:hint="@string/first_name_hint"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"

                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish"
                android:visibility="visible" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_lastnames"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/last_name_hint"

                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"

                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_emailAdresss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"

                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_mobiles"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:singleLine="true"

                    android:textColor="@color/white"

                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"

                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText

                    android:id="@+id/txt_passwords"

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/pinhint"
                    android:inputType="numberPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:background="@color/white_greyish"
                android:visibility="visible" />


            <CheckBox
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/terms_conditions"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button

                android:id="@+id/btn_register"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="3dp"
                android:text="@string/signUp"
                android:textColor="@color/background_color"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/card"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:padding="1dp"
                android:text="or (Use google sign up)"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/already_user"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:onClick="newloginBtnPressed"
            android:padding="10dp"
            android:text="@string/already_user"
            android:textColor="@color/md_yellow_500"
            android:textSize="15sp" />
    </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="20dp"
        android:visibility="visible">

        <LinearLayout

            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView


                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/foodmovers" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white_greyish"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/email_hint"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_user_idl"
                    android:layout_width="fill_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"

                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"

                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passowrd"
                android:textColorHint="@color/white"
                app:hintTextAppearance="@color/white"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_passwordl"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:inputType="numberPassword"

                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"

                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="5dp">

                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_pwd"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:onClick="forgotPassword"
                    android:padding="5dp"
                    android:text="@string/forgot"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="3dp"
                android:text="@string/login"
                android:textColor="@color/background_color"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/createAccount"


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:onClick="newAccountBtnPressed"
            android:padding="5dp"
            android:text="@string/newUser"
            android:textColor="@color/yellow_color_picker"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/forgot_password_l"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <ImageView


            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/icon"
            android:visibility="visible" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/registered_emailid"
            android:textColor="@color/white_greyish"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/registered_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/backToLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:onClick="newloginBtnPressed"
                android:padding="5dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:onClick="submitEmail"
                android:padding="5dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>